Hero background image on mobile fix?

--- a/src/sass/flexible-content-blocks/_hero.scss
+++ b/src/sass/flexible-content-blocks/_hero.scss
@@ -27,7 +27,7 @@
       align-items: flex-end;
       background-image: none !important;
       position: relative;
-      background-color: #000;
+      // background-color: #000;
 
       &__mobile-image {
         position: absolute;
